--- a/Diagramme/.vscode/settings.json
+++ b/Diagramme/.vscode/settings.json
@@ -3,13 +3,13 @@
         "."
     ],
     "java.project.referencedLibraries": [
-        "/home/colomonos/Bureau/javafx-sdk-17.0.11/lib/javafx-swt.jar",
-        "/home/colomonos/Bureau/javafx-sdk-17.0.11/lib/javafx.web.jar",
-        "/home/colomonos/Bureau/javafx-sdk-17.0.11/lib/javafx.swing.jar",
-        "/home/colomonos/Bureau/javafx-sdk-17.0.11/lib/javafx.media.jar",
-        "/home/colomonos/Bureau/javafx-sdk-17.0.11/lib/javafx.graphics.jar",
-        "/home/colomonos/Bureau/javafx-sdk-17.0.11/lib/javafx.fxml.jar",
-        "/home/colomonos/Bureau/javafx-sdk-17.0.11/lib/javafx.controls.jar",
-        "/home/colomonos/Bureau/javafx-sdk-17.0.11/lib/javafx.base.jar"
+        "lib\\javafx.base.jar",
+        "lib\\javafx.controls.jar",
+        "lib\\javafx.fxml.jar",
+        "lib\\javafx.graphics.jar",
+        "lib\\javafx.media.jar",
+        "lib\\javafx.swing.jar",
+        "lib\\javafx.web.jar",
+        "lib\\javafx-swt.jar"
     ]
 }
