les fichier sont (un peu) mieux ranger

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,13 @@
             "name": "Exec",
             "request": "launch",
             "mainClass": "Exec",
+            "projectName": "sae_java"
+        },
+        {
+            "type": "java",
+            "name": "Exec",
+            "request": "launch",
+            "mainClass": "Exec",
             "projectName": "AppJo"
         },
         {
