--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,13 @@
             "type": "java",
             "name": "jdbc",
             "request": "launch",
+            "mainClass": "data.jdbc",
+            "projectName": "sae_java"
+        },
+        {
+            "type": "java",
+            "name": "jdbc",
+            "request": "launch",
             "mainClass": "jdbc",
             "projectName": "sae_java"
         },
@@ -36,14 +43,14 @@
             "type": "java",
             "name": "Current File",
             "request": "launch",
-            "vmArgs": "--module-path /home/colomonos/Bureau/javafx-sdk-17.0.11/lib/ --add-modules javafx.controls,javafx.fxml",
+            "vmArgs": "--module-path C:\\Users\\Bastien Monet\\OneDrive\\Documents\\Dossier BUT info\\SAE\\SAE JO\\SAE-2.01-2.07-java-6\\sae_java\\lib --add-modules javafx.controls,javafx.fxml",
             "mainClass": "${file}"
         },
         {
             "type": "java",
             "name": "Executable",
             "request": "launch",
-            "vmArgs": "--module-path /home/colomonos/Bureau/javafx-sdk-17.0.11/lib/ --add-modules javafx.controls,javafx.fxml",
+            "vmArgs": "--module-path C:\\Users\\Bastien Monet\\OneDrive\\Documents\\Dossier BUT info\\SAE\\SAE JO\\SAE-2.01-2.07-java-6\\sae_java\\lib --add-modules javafx.controls,javafx.fxml",
             "mainClass": "Executable",
             "projectName": "sae_java"
         },
@@ -51,7 +58,7 @@
             "type": "java",
             "name": "MainTest",
             "request": "launch",
-            "vmArgs": "--module-path /home/colomonos/Bureau/javafx-sdk-17.0.11/lib/ --add-modules javafx.controls,javafx.fxml",
+            "vmArgs": "--module-path C:\\Users\\Bastien Monet\\OneDrive\\Documents\\Dossier BUT info\\SAE\\SAE JO\\SAE-2.01-2.07-java-6\\sae_java\\lib --add-modules javafx.controls,javafx.fxml",
             "mainClass": "MainTest",
             "projectName": "sae_java"
         }
